# usb-audio

./: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  usb-audio.ioc
Core/Inc/: VUmeter.h  filter_helpers.h  image_VUmeter.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usb_audio_class.h
Core/Inc/visuals/: VUmeter.h  bouncing_bars.h  waveform.h
Core/Src/: VUmeter.c  filter_helpers.c  image_VUmeter_BG.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  usb_audio_class.c
Core/Src/visuals/: VUmeter.c  bouncing_bars.c  waveform.c
Drivers/GU128X32D/: CMakeLists.txt
Drivers/GU128X32D/Inc/: gu128x32d.h
Drivers/GU128X32D/Src/: gu128x32d.c
Drivers/I2S_audio_player/: CMakeLists.txt
Drivers/I2S_audio_player/Inc/: audio_player.h  resample.h
Drivers/I2S_audio_player/PrivateInc/: audio_player_types.h  resample.h
Drivers/I2S_audio_player/Src/: audio_player.c  resample.c
Drivers/SH1106_I2C/: CMakeLists.txt
Drivers/SH1106_I2C/Inc/: sh1106.h
Drivers/SH1106_I2C/Src/: sh1106.c
Drivers/SSD1306_I2C/: CMakeLists.txt
Drivers/SSD1306_I2C/Inc/: ssd1306.h
Drivers/SSD1306_I2C/Src/: ssd1306.c
Middlewares/microGL/: CMakeLists.txt
Middlewares/microGL/Inc/: fonts.h  microGL.h
Middlewares/microGL/Src/: fonts.c  microGL.c
USB_DEVICE/App/: usbd_audio_if.c  usbd_desc.c
cmake/stm32cubemx/: CMakeLists.txt
